fixed schedule text align

--- a/assets/scss/_schedule.scss
+++ b/assets/scss/_schedule.scss
@@ -165,6 +165,10 @@
         font-weight: 700;
         text-align: center;
 
+        @include lg {
+            text-align: left; 
+        }
+
         &--time {
             font-size: var(--size-md);
             * {
