--- a/assets/style.css
+++ b/assets/style.css
@@ -799,6 +799,11 @@ a {
   font-weight: 700;
   text-align: center;
 }
+@media (min-width: 1224px) {
+  .schedule__cell {
+    text-align: left;
+  }
+}
 .schedule__cell--time {
   font-size: var(--size-md);
   border-right: 1px solid var(--color-bright);
